CSS/styles.css
/* ... */
.collapsible__heading {
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 3rem;
  font-weight: 600;
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
}

.collapsible__chevron {
  transform: rotate(-90deg);
  transition: transform 0.3s;
}

.collapsible__content {
  max-height: 0;
  overflow: hidden;
  transition: all 0.5s;
  opacity: 0;
  transition-timing-function: ease-in-out;
}

.collapsible__content > ul {
  list-style: none;
  padding: 0;
  margin: 0;
  justify-content: flex-start;
}

.collapsible__content > ul > li {
  padding: 0;
  margin-bottom: 1rem;
}

.collapsible--expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
}

.collapsible--expanded .collapsible__chevron {
  transform: rotate(0);
}

@media screen and (min-width: 1140px) {
  .collapsible__header {
    margin-bottom: 2rem;
  }
}
/* Collapsibles End */

/* Blocks */
.block {
  --vertical-padding: 6rem;
  --vertical-padding-offset: 10rem;
  padding: var(--vertical-padding) 2rem;
}

.block--dark {
  background-color: rgb(0, 0, 0);
}

.block__header {
  text-align: center;
  margin-bottom: 4rem;
}

.block__heading {
  margin-top: 0;
}

.block__heading-content {
  margin-bottom: 0;
}

.block--dark h1,
.block--dark h2,
.block--dark h3 {
  color: white;
}

.block--skewed-right {
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
  padding-bottom: calc(
    var(--vertical-padding) + var(--vertical-padding-offset)
  );
}

.block--skewed-left {
  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
  padding-bottom: calc(
    var(--vertical-padding) + var(--vertical-padding-offset)
  );
}

.container {
  max-width: 1140px;
  margin: 0 auto;
}

/* Blocks End */

/* Navigation Bar */

.headerBar {
  border-bottom: 1px solid rgb(100, 100, 100);
}

.nav {
  background-color: black;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 0 1rem;
  align-items: center;
}

.nav__list {
  width: 100%;
  margin: 0;
  text-align: center;
  max-height: 0;
  opacity: 0;
}

.nav__item {
  padding: 1rem 2rem;
  border-bottom: 1px solid rgb(66, 66, 66);
}

.nav__item:last-child {
  border: 0;
}

.nav__item > a {
  color: #d2d0db;
}

.nav__item > a:hover {
  color: #fff;
}

.nav__toggler {
  margin: 1rem 2rem;
  opacity: 0.5;
  transition: box-shadow 0.15s;
  cursor: pointer;
}

.logoFix {
  display: flex;
  align-items: center;
  padding: 0;
}

.nav.collapsible--expanded .nav__toggler {
  opacity: 1;
  border-radius: 6px;
  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.657);
}

@media screen and (min-width: 768px) {
  .nav {
    padding: 0;
  }

  .nav__list {
    padding: 0;
  }
}

@media screen and (min-width: 1024px) {
  .nav__toggler {
    display: none;
  }
  .nav__list {
    width: auto;
    display: flex;
    max-height: 100%;
    opacity: 1;
  }
  .nav__item {
    border: 0;
  }
}
/* Navigation Bar End */

/* Hero */
.hero {
  margin-top: 0;
}

.hero__image {
  width: 100%;
}

.hero__tagline {
  margin: 2rem 0 5rem 0;
  font-size: 2rem;
  color: #b9c3cf;
  letter-spacing: 1px;
}

.hero__content {
  align-self: center;
  text-align: center;
}

@media screen and (min-width: 768px) {
  .hero__content {
    text-align: left;
    padding: 0;
    padding-left: 3rem;
  }

  .hero__image {
    padding: 0 1rem;
  }
}

/* Hero End*/

/* Domain Block */
.block-domain .input-group {
  border: 0;
  box-shadow: 0 0 30px 20px #e6ebee;
  margin: 4rem auto;
}

.block-fixed {
  position: fixed;
  z-index: 9999;
  width: 100%;
}

.block-domain__prices {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 6rem 6rem;
  font-size: 2rem;
  font-weight: 600;
  justify-items: center;
  margin: 0 auto;
}

.block-domain__prices > li {
  white-space: nowrap;
}

@media screen and (min-width: 500px) {
  .block-domain__prices {
    grid-template-columns: repeat(3, 1fr);
    max-width: 70%;
  }
}

@media screen and (min-width: 768px) {
  .block-domain__prices {
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
  }

  .block-domain .input-group {
    max-width: 65%;
  }
}
/* Domain Block End */

/* Plans Section */
.block-plans .grid {
  gap: 8rem 4rem;
}

.block-plans .card {
  max-width: 500px;
  margin: 0 auto;
}

.block-plans .grid {
  grid-template-columns: 1fr;
}

@media screen and (min-width: 1024px) {
  .block-plans .grid {
    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
  }
}
/* Plans Section End*/

/* Features Section */
.block-features .media {
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.block-features .media__image {
  margin: 0 2rem;
  margin-bottom: 1rem;
}

.feature {
  margin: 12rem 0;
}

.feature:first-of-type {
  margin-top: 6rem;
}

.feature__header {
  text-align: center;
}
.feature__header p {
  max-width: 60%;
  margin: 0 auto;
}

.block-features-image {
  max-width: 100%;
  position: relative;
  top: 2rem;
}

@media screen and (min-width: 768px) {
  .feature:nth-of-type(even) .media {
    order: 2;
  }
}

@media screen and (max-width: 1140px) {
  .block-features .grid {
    grid-template-columns: 1fr;
  }
}
/* Features Section End */

/* Showcase Block */

.block-showcase__image > img {
  width: 100%;
}

@media screen and (min-width: 768px) {
  .block-showcase .grid {
    grid-template-columns: 50% 50%;
  }

  .block-showcase__image {
    justify-self: flex-end;
  }

  .block-showcase__image > img {
    width: auto;
    max-width: 700px;
  }
}
/* Showcase Block End */

/* Footer Section */
.footer {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.footerLogo {
  margin-top: 7rem;
  text-align: center;
}

.footerLogo > img {
  margin-bottom: 3rem;
}

.collapsible__footer {
  padding: 2rem;
  border-bottom: 1px solid rgb(66, 66, 66);
  width: 100%;
}

.collapsible--expanded .collapsible__content {
  margin-top: 2rem;
}
/* ... */

